primera parte del proyecto

--- a/index.html
+++ b/index.html
@@ -5,21 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colegio Miguel Grau - Registro de Usuario</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
-<<<<<<< HEAD
     <header><!--navegacion-->
         <h1>Bienvenido al Colegio MIguel Grau</h1>
         <nav>
             <a href="acercade.html" class="acerca">Acerca del colegio</a>
         </nav>
-=======
-    <header>
-        <h1>Bienvenido al Colegio Miguel Grau</h1>
-        <P>"Institución educativa líder y reconocida a nivel regional como referente de calidad."</P>
->>>>>>> a879f423fa19cf3b6e92f49ad86a6710cde85c03
         <p>Selecciona tu rol para continuar con el registro.</p>
     </header>
 
