--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <main><!--Contenido principal-->
         <div class="contenedor-seleccion">
-            <button onclick="window.location.href='registro_profesor.html'" class="btn-rol"> Profesor</button>
-            <button onclick="window.location.href='registro_estudiante.html'" class="btn-rol"> Estudiante</button>
+            <button onclick="window.location.href='/pages/registro_profesor.html'" class="btn-rol"> Profesor</button>
+            <button onclick="window.location.href='/pages/registro_estudiante.html'" class="btn-rol"> Estudiante</button>
         </div>
     </main>
 <!--piede pagina-->
