index de paginas

--- a/pages/acercade.html
+++ b/pages/acercade.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <header>
         <!--navegacion-->
         <h1>Colegio Miguel Grau</h1>
-        <a href="/index.html" class="btn-volver">← Volver a selección</a>
+        <a href="../index.html" class="btn-volver">← Volver a selección</a>
 
     </header>
     <main>
@@ -32,7 +32,7 @@
             comunidad y del Perú.
 
         </p>
-        <img src="images/miguelgrau.png" alt="">
+        <img src="../images/miguelgrau.png" alt="">
     </main>
     <!--Pie de pagina-->
     <footer>
