--- a/pages/header.html
+++ b/pages/header.html
@@ -1,15 +1,15 @@
 <header class="main-header">
-    <a href="../index.html" class="header-index">Colegio Miguel Grau</a>
+    <a href="/index.html" class="header-index">Colegio Miguel Grau</a>
     <nav class="main-nav">
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="../pages/acercade.html">Acerca de</a></li>
-            <li><a href="../login.html">Iniciar Sesión</a></li>
+        <ul class="nav-menu">
+            <li><a href="/index.html">Inicio</a></li>
+            <li><a href="/pages/acercade.html">Acerca de</a></li>
+            <li><a href="/login.html">Iniciar Sesion</a></li>
             <li class="nav-dropdown">
-                <a href="#" class="dropdown-toggle">Registro ▾</a>
+                <a href="#" class="dropdown-toggle">Registro</a>
                 <ul class="dropdown-menu">
-                    <li><a href="../pages/registro_estudiante.html">Estudiante</a></li>
-                    <li><a href="../pages/registro_profesor.html">Profesor</a></li>
+                    <li><a href="/pages/registro_estudiante.html">Estudiante</a></li>
+                    <li><a href="/pages/registro_profesor.html">Profesor</a></li>
                 </ul>
             </li>
         </ul>
