--- a/pages/interfaz_profesor.html
+++ b/pages/interfaz_profesor.html
@@ -3,109 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Profesor - Colegio Miguel Grau</title>
+    <title>Panel Profesor - Colegio Miguel Grau</title>
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="../styles/footer.css">
-    <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/interfaz_profesor.css">
 </head>
 <body>
-    <!-- NAVBAR -->
     <nav class="navbar">
         <div class="navbar-content">
             <div class="navbar-brand">
-                <span style="font-size: 32px;">👨‍🏫</span>
+                <span style="font-size: 32px;">&#128104;&#8205;&#127979;</span>
                 <div>
                     <h1 id="nombreProfesor">Cargando...</h1>
-                    <p style="font-size: 13px; opacity: 0.9;">Panel de Profesor</p>
+                    <p>Panel de Profesor</p>
                 </div>
             </div>
             <div class="navbar-user">
-                <div class="user-avatar" id="userAvatar">CP</div>
-                <button class="btn-logout" id="btnCerrarSesion">
-                     Cerrar Sesión
-                </button>
+                <div class="user-avatar" id="userAvatar">P</div>
+                <button class="btn-logout" id="btnCerrarSesion">Cerrar Sesion</button>
             </div>
         </div>
     </nav>
 
-    <!-- MAIN CONTAINER -->
     <div class="main-container">
-        <!-- STATISTICS -->
         <div class="stats-grid">
             <div class="stat-card">
-                <div class="stat-icon purple">📚</div>
+                <div class="stat-icon purple">&#128218;</div>
                 <div class="stat-info">
                     <h3 id="totalTareas">0</h3>
                     <p>Tareas Creadas</p>
                 </div>
             </div>
             <div class="stat-card">
-                <div class="stat-icon green">✅</div>
+                <div class="stat-icon green">&#9989;</div>
                 <div class="stat-info">
                     <h3 id="tareasActivas">0</h3>
                     <p>Tareas Activas</p>
                 </div>
             </div>
             <div class="stat-card">
-                <div class="stat-icon orange">👥</div>
+                <div class="stat-icon orange">&#128101;</div>
                 <div class="stat-info">
                     <h3 id="totalEstudiantes">0</h3>
                     <p>Estudiantes</p>
                 </div>
             </div>
             <div class="stat-card">
-                <div class="stat-icon blue">📊</div>
+                <div class="stat-icon blue">&#128202;</div>
                 <div class="stat-info">
                     <h3 id="calificaciones">0</h3>
-                    <p>Calificaciones Asignadas</p>
+                    <p>Calificaciones</p>
                 </div>
             </div>
         </div>
 
-        <!-- TABS -->
         <div class="tabs">
-            <button class="tab active" onclick="cambiarTab('crear')">
-                 Crear Tarea
-            </button>
-            <button class="tab" onclick="cambiarTab('tareas')">
-                 Mis Tareas
-            </button>
+            <button class="tab active" onclick="cambiarTab('crear')">Crear Tarea</button>
+            <button class="tab" onclick="cambiarTab('tareas')">Mis Tareas</button>
+            <button class="tab" onclick="cambiarTab('calificaciones')">Calificaciones</button>
+            <button class="tab" onclick="cambiarTab('estudiantes')">Estudiantes</button>
         </div>
 
-        <!-- CREAR TAREA -->
         <div class="content-section active" id="seccionCrear">
             <div class="card">
                 <div class="card-header">
-                    <h2> Nueva Tarea</h2>
+                    <h2>Nueva Tarea</h2>
                 </div>
                 <form id="formCrearTarea">
                     <div class="form-grid">
                         <div class="form-group">
-                            <label for="tituloTarea">Título de la Tarea *</label>
-                            <input 
-                                type="text" 
-                                id="tituloTarea" 
-                                placeholder="Ej: Ecuaciones Cuadráticas"
-                                required
-                            >
+                            <label for="tituloTarea">Titulo</label>
+                            <input type="text" id="tituloTarea" placeholder="Titulo de la tarea" required>
                         </div>
                         <div class="form-group">
-                            <label for="cursoTarea">Curso *</label>
+                            <label for="cursoTarea">Curso</label>
                             <select id="cursoTarea" required>
-                                <option value="">Seleccionar curso...</option>
-                                <option value="Matemática">Matemática</option>
-                                <option value="Comunicación">Comunicación</option>
-                                <option value="Ciencia y Tecnología">Ciencia y Tecnología</option>
+                                <option value="">Seleccionar...</option>
+                                <option value="Matematica">Matematica</option>
+                                <option value="Comunicacion">Comunicacion</option>
+                                <option value="Ciencia y Tecnologia">Ciencia y Tecnologia</option>
                                 <option value="Ciencias Sociales">Ciencias Sociales</option>
-                                <option value="Inglés">Inglés</option>
-                                <option value="Arte y Cultura">Arte y Cultura</option>
-                                <option value="Educación Física">Educación Física</option>
-                                <option value="Educación Religiosa">Educación Religiosa</option>
+                                <option value="Ingles">Ingles</option>
+                                <option value="Arte">Arte</option>
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="tipoTarea">Tipo *</label>
+                            <label for="tipoTarea">Tipo</label>
                             <select id="tipoTarea" required>
                                 <option value="tarea">Tarea</option>
                                 <option value="examen">Examen</option>
@@ -113,47 +95,54 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="fechaEntrega">Fecha de Entrega *</label>
+                            <label for="fechaEntrega">Fecha de Entrega</label>
                             <input type="date" id="fechaEntrega" required>
                         </div>
+                        <div class="form-group">
+                            <label for="puntosTarea">Puntos</label>
+                            <input type="number" id="puntosTarea" value="20" min="0" max="20" required>
+                        </div>
                         <div class="form-group full-width">
-                            <label for="descripcionTarea">Descripción *</label>
-                            <textarea 
-                                id="descripcionTarea" 
-                                placeholder="Describe la tarea, objetivos, criterios de evaluación..."
-                                required
-                            ></textarea>
+                            <label for="descripcionTarea">Descripcion</label>
+                            <textarea id="descripcionTarea" placeholder="Descripcion de la tarea" required></textarea>
                         </div>
                     </div>
-                    <div style="margin-top: 25px; text-align: right;">
-                        <button type="submit" class="btn btn-primary">
-                             Crear Tarea
-                        </button>
+                    <div style="margin-top: 20px; text-align: right;">
+                        <button type="submit" class="btn btn-primary">Crear Tarea</button>
                     </div>
                 </form>
             </div>
         </div>
 
-        <!-- MIS TAREAS -->
         <div class="content-section" id="seccionTareas">
-            <div class="tasks-grid" id="listaTareas">
-                <!-- Las tareas se cargarán dinámicamente -->
+            <div class="card">
+                <div class="card-header">
+                    <h2>Mis Tareas</h2>
+                </div>
+                <div id="listaTareas"></div>
+            </div>
+        </div>
+
+        <div class="content-section" id="seccionCalificaciones">
+            <div class="card">
+                <div class="card-header">
+                    <h2>Calificaciones</h2>
+                </div>
+                <div id="listaCalificaciones"></div>
+            </div>
+        </div>
+
+        <div class="content-section" id="seccionEstudiantes">
+            <div class="card">
+                <div class="card-header">
+                    <h2>Estudiantes Registrados</h2>
+                </div>
+                <div id="listaEstudiantes"></div>
             </div>
         </div>
     </div>
 
-    <!-- MODAL CALIFICAR -->
-    <div class="modal" id="modalCalificar">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h2> Calificar Estudiantes</h2>
-                <button class="close-modal" onclick="cerrarModal()">×</button>
-            </div>
-            <div class="modal-body">
-                <div id="contenidoCalificacion"></div>
-            </div>
-        </div>
-    </div>
-    <script src="../scripts/interfaz_profesor.js"></script>
+    <script src="../javascript/control_sistema.js"></script>
+    <script src="../javascript/interfaz_profesor.js"></script>
 </body>
 </html>
